UserServiceTest - fix updateUserByID_success